# simuPOP

./: .gitignore  .travis.yml  2to3.bat  AUTHORS  CMakeLists.txt  ChangeLog  DEVELOPMENT.md  Doxyfile  INSTALL  MANIFEST  MANIFEST.in  Makefile  NEWS  PR.md  README  README.distribution  README.documentation  README.md  README.release  RoadMap  SConstruct  TODO  config.h  config_linux.h  config_win32.h  pyproject.toml  requirements.txt  setup.py  simuOpt.py  simuPOP.release  simuPOP_version.py
.github/workflows/: python-app.yml  release.yml
branches/Python3/: README.release  TODO  setup.py
branches/chromFactory/: Doxyfile  MANIFEST.in  simuPOP.release
branches/mut_iterator/: SConstruct
branches/mutant/: MANIFEST.in  SConstruct  setup.py
branches/mutant1/: simuPOP_version.py
branches/mutant_new/: ChangeLog  SConstruct  code-style.cfg  setup.py  simuOpt.py
branches/openMP/: ChangeLog  MANIFEST.in  Makefile  SConstruct  code-style.cfg  config.h  setup.py  simuOpt.py  simuPOP.vcproj  simuPOP_version.py
cmake/: SimuPOPConfig.h.in
coasim/: builder.cc  builder.hh  builder_events.cc  builder_events.hh  coaSim.i  configuration.cc  configuration.hh  descender.cc  descender.hh  dist_funcs.cc  dist_funcs.hh  epochs.cc  epochs.hh  interval.cc  interval.hh  marker.cc  marker.hh  micro_satellite_marker.cc  micro_satellite_marker.hh  monitor.hh  node.cc  node.hh  retired_interval.cc  retired_interval.hh  simulator.cc  simulator.hh  snp_marker.cc  snp_marker.hh  testCoaSim.py  testCoasim.py  trait_marker.cc  trait_marker.hh
development/: code-style.cfg  doxy2swig.py  release.py  release.sos
development/conda/: meta.yaml
development/docker/: .Dockerfile.swp  Dockerfile
development/win32/: stdint.h
doc/: HomoMatingScheme.dia  HomoMatingScheme.eps  Makefile  conf.py  contents.rst  cookbook.lyx  course.lyx  course.py  details.lyx  details.py  develGuide.lyx  doc_generation.dot  hybrid.py  joblist.lst  manual.layout  postGuide.sh  refManual.lyx  refManual.py  reich.py  reich2.py  reich3.py  runSampleCode.py  saveQTDT1.py  simuPOP.bib  simuPOP.ppt  simuPOPposter-letter.ppt  simuPOPposter.ppt  src_examples.py  topics.lyx  topics.py  tutorial.lyx  tutorial.py  userGuide.lyx  userGuide.py
doc/cookbook/: Mating_consanguineous.py  Mating_haplodiploid.py  Mating_mitochondrial.py  Mating_overlappingGeneration.py  Mating_pyMating_cpp.h  Mating_pyMating_cpp.i  Mating_pyMating_cpp.py  Mating_pyParentsChooser.py  Mating_selfing.py  demoPyOperator.py
doc/texinputs/: manual.cls  python.sty
doc/tools/: convert.py  converter.diff  converter_patch.diff  indexcontent.html  indexsidebar.html  support.py
docs/: AcgtMutator.py  AffectionSplitterRef.ref  BackwardMigratorRef.ref  BaseOperatorRef.ref  BernullitrialsRef.ref  BernullitrialsTRef.ref  BuiltInParentsChooser.py  CombinedParentsChooserRef.ref  CombinedSplitterRef.ref  ConditionalMatingRef.ref  ContextMutator.py  ContextMutatorRef.ref  DiscardIf.py  DiscardIfRef.ref  Dumper.py  DumperRef.ref  ExceptionRef.ref  GenoStruTraitRef.ref  GenotypeSplitterRef.ref  HaplodiploidMating.py  HeteroMatingSP.py  HeteroMatingVSP.py  HeteroMatingWeight.py  IdTagger.py  IfElse.py  IfElseFixed.py  IfElseRef.ref  IndexErrorRef.ref  InfoEval.py  InfoEvalRef.ref  InfoExec.py  InfoSplitterRef.ref  InheritTagger.py  InitGenotype.py  InitGenotypeRef.ref  InitInfo.py  InitLineageRef.ref  InitSex.py  InitSexRef.ref  KAlleleMutator.py  (+438 more)
docs/_sources/: refManual_ch1.rst.txt  refManual_ch2_sec1.rst.txt  refManual_ch2_sec6.rst.txt  refManual_ch3_sec14.rst.txt  refManual_ch3_sec2.rst.txt  refManual_ch3_sec4.rst.txt  refManual_ch3_sec7.rst.txt  refManual_ch4_sec2.rst.txt  userGuide_ch1.rst.txt  (+23 more)
internal-test/: mating.py  migration.py  population.py  recombination.py
scripts/: analComplexDisease.py  demoNonRandomMating.i  demoNonRandomMating.py  demoPyOperator.py  loadHapMap.py  popStat.py  simuAdmixture.py  simuCDCV.py  simuCluster.py  simuComplexDisease.py  simuEasyPop.py  simuForward.py  simuHWE.py  simuLDDecay.py  simuNeutralSNPs.py  simuRecHotSpot.py  simuViewPop.py
simuPOP/: __init__.py  genoStru.cpp  outputer.cpp  population.h  sampling.py  selector.cpp  stator.cpp  utility.cpp
src/: Makefile  Makefile.gcc  SConstruct  __init__.py  _version.py  arraymodule.c  boost_pch.hpp  customizedTemplates.cpp  customizedTypes.c  demography.py  genoStru.cpp  genoStru.h  gsl.i  gsl.py  gsl_wrap.c  hapMapUtil.py  individual.cpp  individual.h  initializer.cpp  initializer.h  main.cpp  mating.cpp  mating.h  migrator.cpp  migrator.h  misc.cpp  misc.h  mutant_vector.h  mutator.cpp  mutator.h  operator.cpp  operator.h  outputer.cpp  outputer.h  params.py  pedigree.cpp  pedigree.h  penetrance.cpp  penetrance.h  plotter.py  (+76 more)
test/: performance.csv  performance.py  performance.summary  run_tests.py  run_tests.sh  sample_32_la_v1.pop  sample_32_mu_v1.pop  sample_32_std_v1.pop  sample_64_ba_v3.pop  sample_64_mu.pop  test_00_carray.py  test_00_genoStru.py  test_01_individual.py  test_02_population.py  test_03_operator.py  test_04_simulator.py  test_05_matings.py  test_06_initialization.py  test_07_rng.py  test_07_tagging.py  test_08_opStat.py  test_08_stat.py  test_09_pyOperator.py  test_09_selection.py  test_10_opIfElse.py  test_11_opPause.py  test_11_terminator.py  test_12_migration.py  test_13_mutation.py  test_14_recombination.py  test_14_transmitter.py  test_15_penetrance.py  test_15_selection.py  test_16_asertainment.py  test_16_sampling.py  test_17_qtrait.py  test_17_utils.py  test_18_penetrance.py  test_18_plotter.py  test_19_demography.py  (+26 more)
tools/: build.py  build_all_platforms.sh  build_doc.sh  build_linux.py  build_src.py  doxy2swig.py  make_linux.sh  make_mac.sh  make_mdk.sh  make_rpy.sh  make_sol.sh  make_src.sh  make_win.sh  snapshot.py  snapshot.sh
trunk/: 2to3.bat  AUTHORS  ChangeLog  Doxy_web  Doxyfile  INSTALL  MANIFEST  MANIFEST.in  Makefile  README.documentation  README.release  RoadMap  SConstruct  TODO  YES  config_linux.h  config_mac.h  config_win32.h  setup.py  simuOpt.py  simuPOP.release  simuPOP_version.py
win32/: libboost_iostreams-vc80-mt-1_33_1.lib
(+2418 files in other folders)
